Safari365 Prod/src/objects/Quotations__c.object
<CustomObject>
    <fields>
        <fullName>Photobooks_Sale_in_USD__c</fullName>
        <label>Photobooks Sale in USD</label>
        <summarizedField>QuotationLineItem__c.Photobooks_Sale_in_USD__c</summarizedField>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Photobooks_Sale_in_ZAR__c</fullName>
        <label>Photobooks Sale in ZAR</label>
        <summarizedField>QuotationLineItem__c.Photobooks_Sale_in_ZAR__c</summarizedField>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Primary_Client_First_Name__c</fullName>
        <formula>Opportunity__r.Account.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Client First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Client_Name__c</fullName>
        <formula>Opportunity__r.Account.FirstName + &quot; &quot; + Opportunity__r.Account.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Quotation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Newest and/or Primary Quotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_by_Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will add this Quotation value ( Sale and Cost) to the main Opportunity value for &quot;Closed Won Deal&quot; Do this if the client is confirming multiple quotations</inlineHelpText>
        <label>Always Include this Quote in Opp Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Profit_Eur__c</fullName>
        <formula>Quotation_Gross_Profit_EUR__c / Sale_in_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit % Eur</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profit_IN_ZAR__c</fullName>
        <formula>Quotation_Gross_Profit_ZAR__c /Sale_in_Zar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit % IN ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profit_USD__c</fullName>
        <formula>Quotation_Gross_Profit_USD__c /Sale_In_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profit % USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profit__c</fullName>
        <formula>Quotation_Profit__c /Quotation_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal reporting figures only (contributes towards targets and BHAGS) These figures will be rolled-up to to the Opportunity values.</inlineHelpText>
        <label>Profit % Total</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quotation_Approval_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quotation Approval Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quotation_Arrival_Date__c</fullName>
        <formula>Opportunity__r.Arrival_Date__c</formula>
        <label>Quotation Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quotation_Cos__c</fullName>
        <formula>(Total_Cos_in_ZAR__c / ROE_ZAR_to_ZAR__c) + (Total_Cos_in_USD__c / ROE_USD_to_ZAR__c)+ (COS_in_EUR__c / ROE_EUR_to_ZAR__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal reporting figures only (contributes towards targets and BHAGS) These figures will be rolled-up to to the Opportunity values.</inlineHelpText>
        <label>Quotation Cost Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quotation_Gross_Profit_EUR__c</fullName>
        <formula>Sale_in_EUR__c -  COS_in_EUR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Gross Profit EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_Gross_Profit_USD__c</fullName>
        <formula>Sale_In_USD__c -  COS_in_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Gross Profit USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_Gross_Profit_ZAR__c</fullName>
        <formula>Sale_in_Zar__c-COS_in_ZAR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Gross Profit ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_ID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_Name__c</fullName>
        <inlineHelpText>Make this descriptive as it displays to the Client in the Members Club</inlineHelpText>
        <label>Quotation Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quotation_Profit__c</fullName>
        <formula>Quotation_Sale__c - Quotation_Cos__c</formula>
        <inlineHelpText>Internal reporting figures only (contributes towards targets and BHAGS) These figures will be rolled-up to to the Opportunity values.</inlineHelpText>
        <label>Quotation Profit Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quotation_Sale_Total_in_CC_AUD__c</fullName>
        <formula>CEILING(CC_Sub_Total_for_ZAR_in_AUD__c + CC_Sub_Total_for_EUR_in_AUD__c + CC_Sub_Total_for_USD_in_AUD__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Sale Total in CC AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_Sale_Total_in_CC_EUR__c</fullName>
        <formula>CEILING(CC_Sub_Total_for_ZAR_in_EUR__c + CC_Sub_Total_for_EUR_in_EUR__c + CC_Sub_Total_for_USD_in_EUR__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Sale Total in CC EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_Sale_Total_in_CC_GBP__c</fullName>
        <formula>MCEILING(CC_Sub_Total_for_ZAR_in_GPB__c + CC_Sub_Total_for_EUR_in_GPB__c + CC_Sub_Total_for_USD_in_GPB__c)</formula>
        <label>Quotation Sale Total in CC GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_Sale_Total_in_CC_USD__c</fullName>
        <formula>MCEILING(CC_Sub_Total_for_ZAR_in_USD__c + CC_Sub_Total_for_EUR_in_USD__c + CC_Sub_Total_for_USD_in_USD__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quotation Sale Total in CC USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_Sale_Total_in_CC__c</fullName>
        <formula>0.1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>OLD FORMULA - JUDD BROKE (Total_Sale_In_Zar__c / ROE_ZAR_to_CC__c) + (Total_Sale_In_USD__c / ROE_USD_to_CC__c)+ (Sale_in_EUR__c / ROE_EUR_to_CC__c )</inlineHelpText>
        <label>OLD DONT USE SaleTotalinClient Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_Sale_Total_in_Selected_CC__c</fullName>
        <description>This displays the quote total in the selected client currency</description>
        <formula>IF( Currency__c == &apos;AUD&apos; , Quotation_Sale_Total_in_CC_AUD__c, IF(Currency__c == &apos;USD&apos;, Quotation_Sale_Total_in_CC_USD__c, IF(Currency__c == &apos;EUR&apos;, Quotation_Sale_Total_in_CC_EUR__c, IF(Currency__c == &apos;GBP&apos;, Quotation_Sale_Total_in_CC_GBP__c, 0.0) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This displays the quote sale total in the selected client currency</inlineHelpText>
        <label>Quotation Sale Total in Selected CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_Sale__c</fullName>
        <formula>(Total_Sale_In_Zar__c / ROE_ZAR_to_ZAR__c) + (Total_Sale_In_USD__c / ROE_USD_to_ZAR__c)+ (Sale_in_EUR__c / ROE_EUR_to_ZAR__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Internal reporting figures only (contributes towards targets and BHAGS) These figures will be rolled-up to to the Opportunity values.</inlineHelpText>
        <label>Quotation Sale Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quotation_Sales__c</fullName>
        <label>Quotation Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_Stage__c</fullName>
        <label>Quotation Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quoting</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Raised Invoice</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Approved_by_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not editable by users and is used in the approval by finance process.</description>
        <inlineHelpText>This field is not editable by users and is used in the approval by finance process.</inlineHelpText>
        <label>Quote Approved by Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Exposure__c</fullName>
        <label>Quote Exposure</label>
        <summarizedField>Exposure_ROE__c.Quote_Exposure__c</summarizedField>
        <summaryForeignKey>Exposure_ROE__c.Quotation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ROE_EUR_to_CC__c</fullName>
        <label>ROE Euro to Client Currency</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROE_EUR_to_ZAR__c</fullName>
        <label>ROE EUR to ZAR</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROE_USD_to_CC__c</fullName>
        <label>ROE USD to Client Currency</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROE_USD_to_ZAR__c</fullName>
        <label>ROE USD to ZAR</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROE_ZAR_to_CC__c</fullName>
        <label>ROE ZAR to Client Currency</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ROE_ZAR_to_ZAR__c</fullName>
        <label>ROE ZAR to ZAR</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Raised_Booking_Confirmation_Date__c</fullName>
        <label>Raised Booking Confirmation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Record_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sale_In_USD__c</fullName>
        <label>Sale In USD</label>
        <summarizedField>QuotationLineItem__c.Sale_in_USD__c</summarizedField>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sale_in_EUR__c</fullName>
        <label>Total Sale in EUR</label>
        <summarizedField>QuotationLineItem__c.Sale_in_Eur__c</summarizedField>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sale_in_Zar__c</fullName>
        <label>Sale in Zar</label>
        <summarizedField>QuotationLineItem__c.Sale__c</summarizedField>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Values_Verified_By_Consultant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposit Values Verified By Consultant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_Client_Currency_Sell_Rate_EUR__c</fullName>
        <formula>IF( Currency__c == &apos;AUD&apos; , CC_ROE_for_EUR_in_AUD__c,  IF(Currency__c == &apos;USD&apos;, CC_ROE_for_EUR_in_USD__c,  IF(Currency__c == &apos;EUR&apos;, CC_ROE_for_EUR_in_EUR__c,  IF(Currency__c == &apos;GBP&apos;, CC_ROE_for_EUR_in_GPB__c, 0.0) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Client Currency Sell Rate  EUR</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Client_Currency_Sell_Rate_USD__c</fullName>
        <formula>IF( Currency__c == &apos;AUD&apos; , CC_ROE_for_USD_in_AUD__c,  IF(Currency__c == &apos;USD&apos;, CC_ROE_for_USD_in_USD__c,  IF(Currency__c == &apos;EUR&apos;, CC_ROE_for_USD_in_EUR__c,  IF(Currency__c == &apos;GBP&apos;, CC_ROE_for_USD_in_GPB__c, 0.0) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Client Currency Sell Rate USD</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Selected_Client_Currency_Sell_Rate_ZAR__c</fullName>
        <formula>IF( Currency__c == &apos;AUD&apos; , CC_ROE_for_ZAR_in_AUD__c,  IF(Currency__c == &apos;USD&apos;, CC_ROE_for_ZAR_in_USD__c,  IF(Currency__c == &apos;EUR&apos;, CC_ROE_for_ZAR_in_EUR__c,  IF(Currency__c == &apos;GBP&apos;, CC_ROE_for_ZAR_in_GPB__c, 0.0) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Selected Client Currency Sell Rate ZAR</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Email_To_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email To Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Itinerary_Notes__c</fullName>
        <label>Itinerary Doc Customer Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spot_Buy_Rate__c</fullName>
        <label>Spot Buy Rate (Deposit payment)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Drive_Quotation_Folder_Url__c</fullName>
        <inlineHelpText>This is Google Drive folder for ther Internal Docs</inlineHelpText>
        <label>Team Drive Quotation Folder Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Text_for_Booking_Confirmation_Requested__c</fullName>
        <defaultValue>$Label.Service_Date_Check</defaultValue>
        <description>Task Triggered to Consultant: 
Client ‘Booking Confirmation’ Requested</description>
        <label>Text for Booking Confirmation Requested</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TotalQuotationLineItems__c</fullName>
        <label>TotalQuotationLineItems</label>
        <summaryForeignKey>QuotationLineItem__c.Quotation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Adult_Passengers__c</fullName>
        <label>Total Adult Passengers</label>
        <summaryFilterItems>
            <field>PassengerQuotationMapping__c.Adult_Passenger__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>PassengerQuotationMapping__c.Quotation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Child_and_Infant_Travellers__c</fullName>
        <label>Total Child and Infant Travellers</label>
        <summaryFilterItems>
            <field>PassengerQuotationMapping__c.Child_Passenger_Type__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>PassengerQuotationMapping__c.Quotation__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Cos_in_USD__c</fullName>
        <formula>COS_in_USD__c +  Photobooks_Cos_in_USD_new__c +   Insurance_Cos_in_USD_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cos in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Cos_in_ZAR__c</fullName>
        <formula>COS_in_ZAR__c +  Photobooks_Cos_in_ZAR_New__c+  Insurance_Cos_in_ZAR_New__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cos in ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Days__c</fullName>
        <formula>TravelEndDate__c - TravelStartDate__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Funds_Outstanding__c</fullName>
        <formula>Quotation_Sale_Total_in_Selected_CC__c - Funds_Received_To_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of all outstanding payments for this quote in the selected client currency.</inlineHelpText>
        <label>Total Funds Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Nights__c</fullName>
        <formula>TravelEndDate__c - TravelStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Nights</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sale_In_USD__c</fullName>
        <formula>Sale_In_USD__c + Photobooks_Sale_in_USD__c +  Insurance_Sale_in_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sale In USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Sale_In_Zar__c</fullName>
        <formula>Sale_in_Zar__c + Photobooks_Sale_in_ZAR__c + Insurance_Sale_in_ZAR__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Sale In ZAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TravelEndDate__c</fullName>
        <label>Travel End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TravelStartDate__c</fullName>
        <label>Travel Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_CC_ROE_Fields_Date__c</fullName>
        <description>The date at which the exchange rate updated</description>
        <label>Update CC ROE Fields Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Update_CC_ROE_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This controls the function whether the system should provide updated Client Currency exchange rates to a Quotation based on a number of factors</description>
        <label>Update CC ROE Fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_Until__c</fullName>
        <inlineHelpText>The date when the quoted exchange rate for this quote will expire. Rate will be valid until midnight of this date South African time.</inlineHelpText>
        <label>Quotation FX Rate Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WETU_Edit_Itinerary__c</fullName>
        <formula>&apos;http://wetu.com/Builder/Build/Personal/ItineraryDetails/&apos; + Wetu_Identifier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Check and Edit this itinerary to make it perfect (certain details may not have mapped through from the Itinerary Builder) The more effort you put in here the better it will look in MC. Note, If you &quot;Update WETU&quot; it will overwrite your changes.</inlineHelpText>
        <label>Editable Itinerary (WETU)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WETU_Link__c</fullName>
        <formula>Opportunity__r.Members_Club__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Provide this link for your Client to access the Members Club (do not hyperlking this link to text in your emails when providing the Client the link, make sure its obvious)</inlineHelpText>
        <label>Members Club Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wetu_Identifier_Key__c</fullName>
        <label>Wetu Identifier Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wetu_Identifier__c</fullName>
        <inlineHelpText>This is the unique WETU URL string if you want to duplicate this exact Members Club itinerrary display. You can override this field with an updated URL string as required (proceed with caution as the quotes need to be identical)</inlineHelpText>
        <label>WETU Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wetu_Request_Fail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wetu Request Fail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>credit_card_sale_total_in_CC_AUD__c</fullName>
        <formula>Quotation_Sale_Total_in_CC_AUD__c +  $CustomMetadata.Credit_Card_Markup__mdt.Credit_Card_Markup.Markup_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit card sale total in CC AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>email_formula__c</fullName>
        <formula>Opportunity__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>email formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isBookingConfStatusOverdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBookingConfStatusOverdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isClientRequestedConfStatusOverdue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is a technical field which will be update by a schedular and monitors FX exposure. When True, must send alert to FX manager</description>
        <label>isClientRequestedConfStatusOverdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>operator_identity_id__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Operator Identity id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>price_excludes__c</fullName>
        <label>Price Excludes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>price_includes__c</fullName>
        <label>Price Includes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wetu_is_disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wetu is Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wetu_operator_id__c</fullName>
        <defaultValue>305</defaultValue>
        <label>Wetu operator id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wetu_operator_theme_id__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Wetu Operator Theme Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wetu_type__c</fullName>
        <defaultValue>(&quot;Personal&quot;)</defaultValue>
        <label>Wetu Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Quotation</label>
    <listViews>
        <fullName>All_Client_Has_Requested_Conf_Quotes</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Quotation_Sale__c</columns>
        <columns>Profit__c</columns>
        <columns>Quotation_Stage__c</columns>
        <columns>Primary_Client_Name__c</columns>
        <columns>Quotation_Name__c</columns>
        <columns>TravelStartDate__c</columns>
        <columns>Itinerary_Summary__c</columns>
        <columns>WETU_Link__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Quotation_Stage__c</field>
            <operation>equals</operation>
            <value>Quoting,Raised Invoice</value>
        </filters>
        <label>My &quot;Actively Quoting&quot; Quotations</label>
    </listViews>
    <listViews>
        <fullName>FX_Client_Requested_Fund_Yet_to_Clear</fullName>
        <columns>Consultant_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Quotation_Stage__c</columns>
        <columns>Quotation_Sale__c</columns>
        <columns>Profit__c</columns>
        <columns>Quote_Exposure__c</columns>
        <columns>Quotation_Name__c</columns>
        <columns>Primary_Client_Name__c</columns>
        <columns>TravelStartDate__c</columns>
        <columns>Valid_Until__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client_Has_Requested_Confirmation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Client_Fund_Recieved__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Rqt + Funds Not Received</label>
        <sharedTo>
            <role>Finance</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FX_Fund_Cleared_Not_Confirmed</fullName>
        <columns>Consultant_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Quotation_Stage__c</columns>
        <columns>Quotation_Sale__c</columns>
        <columns>Profit__c</columns>
        <columns>Quote_Exposure__c</columns>
        <columns>Quotation_Name__c</columns>
        <columns>Primary_Client_Name__c</columns>
        <columns>TravelStartDate__c</columns>
        <columns>Valid_Until__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client_Has_Requested_Confirmation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Client_Fund_Recieved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Quotation_Stage__c</field>
            <operation>notEqual</operation>
            <value>Confirmed</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>notEqual</operation>
            <value>Finance Approval Pending,Finance Approved,Finance Rejected</value>
        </filters>
        <label>Rqt+Fund Rcd+Not Conf+Not In Appv Proces</label>
        <sharedTo>
            <role>Finance</role>
            <role>Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Finance_Approval_Pending</fullName>
        <columns>Consultant_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Quotation_Stage__c</columns>
        <columns>Quotation_Sale__c</columns>
        <columns>Profit__c</columns>
        <columns>Quote_Exposure__c</columns>
        <columns>Quotation_Name__c</columns>
        <columns>Primary_Client_Name__c</columns>
        <columns>TravelStartDate__c</columns>
        <columns>Valid_Until__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client_Has_Requested_Confirmation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Finance Approval Pending</value>
        </filters>
        <label>Finance Approval Pending</label>
        <sharedTo>
            <role>Finance</role>
            <role>Management</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Actively_Quoting_Quotations</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Quotation_Sale__c</columns>
        <columns>Profit__c</columns>
        <columns>Quotation_Stage__c</columns>
        <columns>Primary_Client_Name__c</columns>
        <columns>Quotation_Name__c</columns>
        <columns>TravelStartDate__c</columns>
        <columns>Itinerary_Summary__c</columns>
        <columns>WETU_Link__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Quotation_Stage__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </filters>
        <label>My &quot;Cancelled&quot; Quotations</label>
    </listViews>
    <listViews>
        <fullName>My_Confirmed_Quotations</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Quotation_Sale__c</columns>
        <columns>Profit__c</columns>
        <columns>Quotation_Stage__c</columns>
        <columns>Primary_Client_Name__c</columns>
        <columns>Quotation_Name__c</columns>
        <columns>TravelStartDate__c</columns>
        <columns>Itinerary_Summary__c</columns>
        <columns>WETU_Link__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Quotation_Stage__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </filters>
        <label>My &quot;Confirmed&quot; Quotations</label>
    </listViews>
    <listViews>
        <fullName>Rqt_Fund_Rcd_Not_Conf_In_Appv_Proces</fullName>
        <columns>Consultant_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Quotation_Stage__c</columns>
        <columns>Quotation_Sale__c</columns>
        <columns>Profit__c</columns>
        <columns>Quote_Exposure__c</columns>
        <columns>Quotation_Name__c</columns>
        <columns>Primary_Client_Name__c</columns>
        <columns>TravelStartDate__c</columns>
        <columns>Valid_Until__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Client_Has_Requested_Confirmation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Client_Fund_Recieved__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Quotation_Stage__c</field>
            <operation>notEqual</operation>
            <value>Confirmed,Cancelled</value>
        </filters>
        <filters>
            <field>Approval_Status__c</field>
            <operation>equals</operation>
            <value>Finance Approval Pending,Finance Approved,Finance Rejected</value>
        </filters>
        <label>Rqt+Fund Rcd+Not Conf+ In Appv Proces</label>
        <sharedTo>
            <role>Finance</role>
        </sharedTo>
    </listViews>
</CustomObject>